# luna-ai-server

./: .env.example  CLIENT_AUTH_INTEGRATION.md  Dockerfile  Dockerfile.cloud  README.md  deploy-cloud-run.sh  pyproject.toml  railway.json  render.yaml  requirements.txt
.github/: copilot-instructions.md
src/auth/: __init__.py  auth.py  routes.py
src/database/: __init__.py  connection.py  models.py
src/server/: __init__.py  __main__.py
src/server/core/: agent.py  luna.onnx  wake_word_detector.py
src/server/core/prompts/: __init__.py
src/server/core/tools/: __init__.py  browser_tools.py  browser_use.py  memory_tools.py  reminder_tools.py  util.py  workspace_tools.py
src/server/core/tools/callbacks/: __init__.py  after_tool_callback.py
src/server/core/tools/mcp/: __init__.py  filesystem.py
src/server/runner/: agent_runner.py  websocket_server.py
src/server/util/: memory_analysis.py  websocket_communication.py
