[project]
name = "luna-ai-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.2.1",
    "browser-use==0.5.11",
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "google-adk",
    "google-api-python-client>=2.181.0",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.13.1",
    "notion-client>=2.5.0",
    "openwakeword>=0.6.0",
    "playwright>=1.55.0",
    "psycopg2-binary>=2.9.10",
    "pyinstaller>=6.15.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.36",
    "stagehand>=0.5.2",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
]

[tool.uv.sources]
google-adk = { git = "https://github.com/enxilium/adk-python.git", rev = "luna-ai-patches" }
